--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/devdb
+    url: jdbc:mysql://localhost:3306/devdb
     username: root
     password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database: mysql
-    show_sql: true
     hibernate:
       ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
